SUBDIRS = libltdl util util/src scenegraph scenegraph/src animation animation/src common common/src logger logger/src concurrency concurrency/src iostream iostream/src cppdoclet pooling pooling/src naming naming/src dimensional dimensional/src workflow workflow/src pforms pforms/src linearalgebra linearalgebra/src evaluators evaluators/src net nurbs xml ontologydto ontologydto/src ontology ontology/src dto dto/src serialisation serialisation/src persistence persistence/src database assembly assembly/src style/src style glrep glrep/src renderer subdivision geometry fx server nameservice relayservice registration matchingservice containerservice publishingservice compileservice registry federator node $(MACOSX_DIRS)
DIST_SUBDIRS = libltdl util util/src scenegraph scenegraph/src animation animation/src common common/src logger logger/src concurrency concurrency/src iostream iostream/src cppdoclet pooling pooling/src naming naming/src dimensional dimensional/src workflow workflow/src pforms pforms/src linearalgebra linearalgebra/src evaluators evaluators/src net nurbs xml ontologydto ontologydto/src ontology ontology/src dto dto/src serialisation serialisation/src persistence persistence/src database assembly assembly/src style/src style glrep glrep/src renderer subdivision geometry fx server nameservice relayservice registration matchingservice containerservice publishingservice compileservice registry federator node $(MACOSX_DIRS)
