lib_LTLIBRARIES = lib_protolayer_animation.la

lib_protolayer_animation_la_SOURCES = \
src/protolayer/animation/Action.cpp \
src/protolayer/animation/Sequence.cpp \
src/protolayer/animation/Transition.cpp \
src/protolayer/animation/TransitionAction.cpp

DEFS = \
 -I../util/src \
 -I../scenegraph/src