lib_LTLIBRARIES = lib_protolayer_carbon.la

lib_protolayer_carbon_la_SOURCES = \
src/protolayer/carbon/BevelButton.cpp \
src/protolayer/carbon/Button.cpp \
src/protolayer/carbon/CarbonException.cpp \
src/protolayer/carbon/ChasingArrows.cpp \
src/protolayer/carbon/CheckBox.cpp \
src/protolayer/carbon/Component.cpp \
src/protolayer/carbon/Control.cpp \
src/protolayer/carbon/ControlListener.cpp \
src/protolayer/carbon/TabControlListener.cpp \
src/protolayer/carbon/DataBrowser.cpp \
src/protolayer/carbon/EditText.cpp \
src/protolayer/carbon/EmbeddingControl.cpp \
src/protolayer/carbon/EventLoopTimerListener.cpp \
src/protolayer/carbon/GroupBox.cpp \
src/protolayer/carbon/Iterator.cpp \
src/protolayer/carbon/KeyboardListener.cpp \
src/protolayer/carbon/Listener.cpp \
src/protolayer/carbon/LittleArrows.cpp \
src/protolayer/carbon/MenuListener.cpp \
src/protolayer/carbon/MouseListener.cpp \
src/protolayer/carbon/NonEmbeddingControl.cpp \
src/protolayer/carbon/Placard.cpp \
src/protolayer/carbon/PushButton.cpp \
src/protolayer/carbon/PopUpButton.cpp \
src/protolayer/carbon/RadioButton.cpp \
src/protolayer/carbon/RadioGroup.cpp \
src/protolayer/carbon/ProgressBar.cpp \
src/protolayer/carbon/RelevanceBar.cpp \
src/protolayer/carbon/RootControl.cpp \
src/protolayer/carbon/RoundButton.cpp \
src/protolayer/carbon/ScrollBar.cpp \
src/protolayer/carbon/Slider.cpp \
src/protolayer/carbon/SearchField.cpp \
src/protolayer/carbon/Separator.cpp \
src/protolayer/carbon/StaticText.cpp \
src/protolayer/carbon/Tab.cpp \
src/protolayer/carbon/TabEvent.cpp \
src/protolayer/carbon/TabControl.cpp \
src/protolayer/carbon/TextField.cpp \
src/protolayer/carbon/TextInputListener.cpp \
src/protolayer/carbon/TitledWindow.cpp \
src/protolayer/carbon/UntitledWindow.cpp \
src/protolayer/carbon/UserPane.cpp \
src/protolayer/carbon/Window.cpp \
src/protolayer/carbon/WindowActionListener.cpp \
src/protolayer/carbon/WindowActivationListener.cpp \
src/protolayer/carbon/WindowClickListener.cpp \
src/protolayer/carbon/WindowCursorChangeListener.cpp \
src/protolayer/carbon/WindowDrawerListener.cpp \
src/protolayer/carbon/WindowFocusListener.cpp \
src/protolayer/carbon/WindowRefreshListener.cpp \
src/protolayer/carbon/WindowStateListener.cpp \
src/protolayer/carbon/WindowTraits.cpp

DEFS =
