lib_LTLIBRARIES = lib_protolayer_renderer.la

lib_protolayer_renderer_la_SOURCES = \
src/protolayer/renderer/Action.cpp \
src/protolayer/renderer/Appearance.cpp \
src/protolayer/renderer/Camera.cpp \
src/protolayer/renderer/Geometry.cpp \
src/protolayer/renderer/Group.cpp \
src/protolayer/renderer/HitModel.cpp \
src/protolayer/renderer/Shape.cpp \
src/protolayer/renderer/Leaf.cpp \
src/protolayer/renderer/LinearAlgebra.cpp \
src/protolayer/renderer/Mouse.cpp \
src/protolayer/renderer/Node.cpp \
src/protolayer/renderer/Point.cpp \
src/protolayer/renderer/ProjectedMouse.cpp \
src/protolayer/renderer/Dimensions.cpp \
src/protolayer/renderer/Scene.cpp \
src/protolayer/renderer/SelectionPlane.cpp \
src/protolayer/renderer/Sequence.cpp \
src/protolayer/renderer/Shot.cpp \
src/protolayer/renderer/Space.cpp \
src/protolayer/renderer/Transition.cpp \
src/protolayer/renderer/TransitionAction.cpp \
src/protolayer/renderer/Font.cpp \
src/protolayer/renderer/Text.cpp

DEFS = -I../util/src