bin_PROGRAMS = cppdoclet

cppdoclet_SOURCES = \
src/protolayer/cppdoclet/Define.cpp \
src/protolayer/cppdoclet/Parsable.cpp \
src/protolayer/cppdoclet/Include.cpp \
src/protolayer/cppdoclet/Macro.cpp \
src/protolayer/cppdoclet/Type.cpp \
src/protolayer/cppdoclet/PrototypeDoclet.cpp \
src/protolayer/cppdoclet/RemoteDoclet.cpp \
src/protolayer/cppdoclet/SerialiseDoclet.cpp \
src/protolayer/cppdoclet/PersistDoclet.cpp \
src/protolayer/cppdoclet/Attribute.cpp \
src/protolayer/cppdoclet/Argument.cpp \
src/protolayer/cppdoclet/Documentation.cpp \
src/protolayer/cppdoclet/Annotation.cpp \
src/protolayer/cppdoclet/Method.cpp \
src/protolayer/cppdoclet/Scope.cpp \
src/protolayer/cppdoclet/Class.cpp \
src/protolayer/cppdoclet/Component.cpp \
src/protolayer/cppdoclet/Dependencies.cpp \
src/protolayer/cppdoclet/Implementation.cpp \
src/protolayer/cppdoclet/Namespace.cpp \
src/protolayer/cppdoclet/Typedef.cpp \
src/protolayer/cppdoclet/run.cpp

DEFS = \
-I../util/src \
-I../common/src \
-I../concurrency/src \
-I../logger/src \
-I../iostream/src

LIBS = \
../common/lib_protolayer_common.la \
../concurrency/lib_protolayer_concurrency.la \
../iostream/lib_protolayer_iostream.la \
../util/lib_protolayer_util.la \
../logger/lib_protolayer_logger.la
