lib_LTLIBRARIES = lib_protolayer_evaluators.la

lib_protolayer_evaluators_la_SOURCES = \
src/protolayer/evaluators/FaceIntermediates.cpp \
src/protolayer/evaluators/FaceNormalsEvaluator.cpp \
src/protolayer/evaluators/VertexNormalsEvaluator.cpp \
src/protolayer/evaluators/EdgeRadialsEvaluator.cpp \
src/protolayer/evaluators/EdgeDirectionsEvaluator.cpp \
src/protolayer/evaluators/VertexRadialsEvaluator.cpp

DEFS = -I../util/src -I../linearalgebra/src -I../subdivision/src