lib_LTLIBRARIES = lib_protolayer_fx.la

lib_protolayer_fx_la_SOURCES = \
src/protolayer/fx/AlphaShift.cpp \
src/protolayer/fx/Dissolve.cpp \
src/protolayer/fx/FadeInNode.cpp \
src/protolayer/fx/FadeOutNode.cpp \
src/protolayer/fx/AnimationAction.cpp \
src/protolayer/fx/Transition.cpp

DEFS = -I../util/src \
-I../animation/src \
-I../style/src \
-I../renderer/src \
-I../scenegraph/src
