lib_LTLIBRARIES = lib_protolayer_geometry.la

lib_protolayer_geometry_la_SOURCES = \
src/protolayer/geometry/HexMesh.cpp \
src/protolayer/geometry/Icosahedron.cpp \
src/protolayer/geometry/Sphere.cpp \
src/protolayer/geometry/QuadSphere.cpp \
src/protolayer/geometry/ArrowDisk.cpp \
src/protolayer/geometry/Target.cpp \
src/protolayer/geometry/Triangle.cpp \
src/protolayer/geometry/RectangularPrism.cpp \
src/protolayer/geometry/TaperedArrow.cpp

DEFS = \
-I../util/src \
-I../renderer/src \
-I../style/src \
-I../scenegraph/src \
-I../subdivision/src \
-I../animation/src \
-I../linearalgebra/src