SUBDIRS = src

lib_LTLIBRARIES = lib_protolayer_iostream.la

lib_protolayer_iostream_la_SOURCES = \
src/protolayer/iostream/Exception.cpp \
src/protolayer/iostream/InputStream.cpp \
src/protolayer/iostream/OutputStream.cpp \
src/protolayer/iostream/XdrInputStream.cpp \
src/protolayer/iostream/XdrOutputStream.cpp

DEFS = \
-I../include \
-I../util/src \
-I../common/src \
-I../logger/src \
-I../concurrency/src
