lib_LTLIBRARIES = lib_protolayer_matchingservice.la

lib_protolayer_matchingservice_la_SOURCES = \
src/protolayer/matchingservice/AccessClient.cpp \
src/protolayer/matchingservice/Exception.cpp \
src/protolayer/matchingservice/ModifyingClient.cpp \
src/protolayer/matchingservice/Service.cpp \
src/protolayer/matchingservice/AddressLoop.cpp

DEFS = \
-I../concurrency/src \
-I../pooling/src \
-I../util/src \
-I../naming/src \
-I../common/src \
-I../logger/src \
-I../iostream/src \
-I../xml/src \
-I../net/src \
-I../ontology/src \
-I../server/src \
-I../ontologydto/src
