lib_LTLIBRARIES = lib_protolayer_nameservice.la

lib_protolayer_nameservice_la_SOURCES = \
src/protolayer/nameservice/Client.cpp \
src/protolayer/nameservice/Record.cpp \
src/protolayer/nameservice/TechniqueRecord.cpp \
src/protolayer/nameservice/Exception.cpp \
src/protolayer/nameservice/Service.cpp \
src/protolayer/nameservice/AddressLoop.cpp \
src/protolayer/nameservice/InMemoryService.cpp

DEFS = -I../pooling/src \
-I../util/src \
-I../naming/src \
-I../concurrency/src \
-I../logger/src \
-I../common/src \
-I../iostream/src \
-I../xml/src \
-I../net/src \
-I../ontology/src \
-I../server/src \
-I../ontologydto/src
