lib_LTLIBRARIES = lib_protolayer_nurbs.la

lib_protolayer_nurbs_la_SOURCES = \
src/protolayer/nurbs/ControlPoint.cpp \
src/protolayer/nurbs/Curve.cpp \
src/protolayer/nurbs/Edge.cpp \
src/protolayer/nurbs/Face.cpp \
src/protolayer/nurbs/HalfEdge.cpp \
src/protolayer/nurbs/HalfFace.cpp \
src/protolayer/nurbs/HalfLoop.cpp \
src/protolayer/nurbs/Loop.cpp \
src/protolayer/nurbs/NURBSException.cpp \
src/protolayer/nurbs/Region.cpp \
src/protolayer/nurbs/Representation.cpp \
src/protolayer/nurbs/Shell.cpp \
src/protolayer/nurbs/Surface.cpp \
src/protolayer/nurbs/Vertex.cpp

DEFS = -I../util/src
