lib_LTLIBRARIES = lib_protolayer_osx.la

lib_protolayer_osx_la_SOURCES = \
src/protolayer/osx/Animator.cpp \
src/protolayer/osx/MouseListener.cpp \
src/protolayer/osx/OSXException.cpp \
src/protolayer/osx/Pane.cpp \
src/protolayer/osx/PaneModel.cpp \
src/protolayer/osx/PaneView.cpp

DEFS = \
-I../util/src \
-I../animation/src \
-I../renderer/src \
-I../carbon/src \
-I../scenegraph/src \
-I../style/src \
-I../nurbs/src
